--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "graphql",
+  "name": "@zemnmez/graphql",
   "version": "14.5.4",
   "description": "A Query Language and Runtime which can target any service.",
   "license": "MIT",
@@ -8,13 +8,13 @@
   "module": "index.mjs",
   "types": "index.d.ts",
   "sideEffects": false,
-  "homepage": "https://github.com/graphql/graphql-js",
+  "homepage": "https://github.com/zemnmez/graphql-js",
   "bugs": {
-    "url": "https://github.com/graphql/graphql-js/issues"
+    "url": "https://github.com/zemnmez/graphql-js/issues"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/graphql/graphql-js.git"
+    "url": "https://github.com/zemnmez/graphql-js.git"
   },
   "keywords": [
     "graphql",
