--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@zemnmez/graphql",
-  "version": "14.5.4",
+  "version": "14.5.5",
   "description": "A Query Language and Runtime which can target any service.",
   "license": "MIT",
-  "private": true,
+  "private": false,
   "main": "index",
   "module": "index.mjs",
   "types": "index.d.ts",
